modify code & design

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "activeTab",
     "tabs",
     "scripting",
-    "contextMenus"
+    "contextMenus",
+    "identity"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -37,7 +38,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["sidebar.html", "sidebar.css", "sidebar.js", "storage.js", "image-storage.js", "error-handler.js", "common.js"],
+      "resources": ["sidebar.html", "sidebar.css", "sidebar.js", "storage.js", "image-storage.js", "error-handler.js", "common.js", "cloud-services.js"],
       "matches": ["<all_urls>"]
     }
   ]
